--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest 2017
-  - pytest 2018
+  - pytest python/2017
+  - pytest python/2018
